# antenna-simulation

./: CMakeLists.txt  README.md  antenna.py  helmholz_equation.py  main.cpp  main.py  maxwell_antenna.ipynb  maxwell_equation.py  mesh.py  parallel_wave.py  source_in_focus.py  value_in_focus.py  value_in_focus_frontend.py  visualisation.py  wave_equation.py  wave_equation_in_resonator.py  wave_visual_gif.py  waveguide_helmholz.py
data/: field_in_focus_005-040.csv  field_on_axe_different_focals_005-050.csv  field_on_axe_different_focals_005-050_second_max.csv  field_on_axe_different_focals_01-02.csv
physics/: fields.py  modes.py  zeros.py
src/: main_pipeline.py  mesh.py  parallel_wave.py  source.py  source_in_focus.py
tests/: test_davis.py
tmm/: tmm.py
utils/: checks.py
visualization/: plotting.py
